--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Certificate Generator Web App</title>
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/favicon.png" type="image/svg+xml" />
   </head>
   <body>
     <div id="root"></div>
